test/codegen/c/keywords.c
/* Generated by re2c */
// re2c $INPUT -o $OUTPUT -ci
#include <assert.h>
#include <string.h>

// Keyword tables for keyword rules subsumed by the identifier rule.
static const unsigned char yykw0_slot[16] = {
	3, 0, 0, 6, 0, 5, 0, 0, 0, 0, 4, 0, 0, 2, 0, 1,
};
static const struct { unsigned long long w0, w1; int n, id; } yykw0_entry[] = {
	{0x0000000000000000ull, 0x0000000000000000ull, 0, 0},
	{0x0000000000006669ull, 0x0000000000000000ull, 2, 1},
	{0x0000000065736c65ull, 0x0000000000000000ull, 4, 2},
	{0x000000656c696877ull, 0x0000000000000000ull, 5, 3},
	{0x0000006e69676562ull, 0x0000000000000000ull, 5, 4},
	{0x766973756c637865ull, 0x0000000000000065ull, 9, 5},
	{0x636e695f6f747561ull, 0x0000746e656d6572ull, 14, 6},
};
/* yykw0 returns 1 + the index of the keyword in [s, e), or 0 if it is not a keyword. */
static int yykw0(const void* s, const void* e) {
	const unsigned char* t = (const unsigned char*)s;
	const long n = (long)((const unsigned char*)e - t);
	unsigned long long w0, w1 = 0;
	if (n <= 0 || n > 16) return 0;
	if (n > 8) {
		const unsigned char* b = t + n - 8;
		w0 = (unsigned long long)t[0] | (unsigned long long)t[1] << 8
		    | (unsigned long long)t[2] << 16 | (unsigned long long)t[3] << 24
		    | (unsigned long long)t[4] << 32 | (unsigned long long)t[5] << 40
		    | (unsigned long long)t[6] << 48 | (unsigned long long)t[7] << 56;
		w1 = ((unsigned long long)b[0] | (unsigned long long)b[1] << 8
		    | (unsigned long long)b[2] << 16 | (unsigned long long)b[3] << 24
		    | (unsigned long long)b[4] << 32 | (unsigned long long)b[5] << 40
		    | (unsigned long long)b[6] << 48 | (unsigned long long)b[7] << 56) >> (8 * (16 - n));
	} else if (n >= 4) {
		const unsigned char* b = t + n - 4;
		w0 = ((unsigned long long)t[0] | (unsigned long long)t[1] << 8
		    | (unsigned long long)t[2] << 16 | (unsigned long long)t[3] << 24)
		    | ((unsigned long long)b[0] | (unsigned long long)b[1] << 8
		    | (unsigned long long)b[2] << 16 | (unsigned long long)b[3] << 24) << (8 * (n - 4));
	} else {
		w0 = (unsigned long long)t[0] | (unsigned long long)t[n >> 1] << (8 * (n >> 1))
		    | (unsigned long long)t[n - 1] << (8 * (n - 1));
	}
	{
		const unsigned idx = yykw0_slot[(w0 * 0x391ceef02702c2fdull + w1 * 0x4baf8cac4784cb13ull) >> 60];
		if (yykw0_entry[idx].n == n && yykw0_entry[idx].w0 == w0 && yykw0_entry[idx].w1 == w1) return yykw0_entry[idx].id;
	}
	return 0;
}
static const unsigned char yykw1_slot[16] = {
	0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 1, 0, 0, 2,
};
static const struct { unsigned long long w0, w1; int n, id; } yykw1_entry[] = {
	{0x0000000000000000ull, 0x0000000000000000ull, 0, 0},
	{0x0000000000646e65ull, 0x0000000000000000ull, 3, 1},
	{0x00006e7275746572ull, 0x0000000000000000ull, 6, 2},
	{0x65756e69746e6f63ull, 0x0000000000000000ull, 8, 3},
};
/* yykw1 returns 1 + the index of the keyword in [s, e), or 0 if it is not a keyword. */
static int yykw1(const void* s, const void* e) {
	const unsigned char* t = (const unsigned char*)s;
	const long n = (long)((const unsigned char*)e - t);
	unsigned long long w0, w1 = 0;
	if (n <= 0 || n > 16) return 0;
	if (n > 8) {
		const unsigned char* b = t + n - 8;
		w0 = (unsigned long long)t[0] | (unsigned long long)t[1] << 8
		    | (unsigned long long)t[2] << 16 | (unsigned long long)t[3] << 24
		    | (unsigned long long)t[4] << 32 | (unsigned long long)t[5] << 40
		    | (unsigned long long)t[6] << 48 | (unsigned long long)t[7] << 56;
		w1 = ((unsigned long long)b[0] | (unsigned long long)b[1] << 8
		    | (unsigned long long)b[2] << 16 | (unsigned long long)b[3] << 24
		    | (unsigned long long)b[4] << 32 | (unsigned long long)b[5] << 40
		    | (unsigned long long)b[6] << 48 | (unsigned long long)b[7] << 56) >> (8 * (16 - n));
	} else if (n >= 4) {
		const unsigned char* b = t + n - 4;
		w0 = ((unsigned long long)t[0] | (unsigned long long)t[1] << 8
		    | (unsigned long long)t[2] << 16 | (unsigned long long)t[3] << 24)
		    | ((unsigned long long)b[0] | (unsigned long long)b[1] << 8
		    | (unsigned long long)b[2] << 16 | (unsigned long long)b[3] << 24) << (8 * (n - 4));
	} else {
		w0 = (unsigned long long)t[0] | (unsigned long long)t[n >> 1] << (8 * (n >> 1))
		    | (unsigned long long)t[n - 1] << (8 * (n - 1));
	}
	{
		const unsigned idx = yykw1_slot[(w0 * 0xc0e16b163a85a4ddull + w1 * 0x890acd8dd443c47dull) >> 60];
		if (yykw1_entry[idx].n == n && yykw1_entry[idx].w0 == w0 && yykw1_entry[idx].w1 == w1) return yykw1_entry[idx].id;
	}
	return 0;
}


enum YYCONDTYPE {
	yycinit,
	yycbody
};


enum { END, ID, NUM, SPACE, ERR, KW_IF, KW_ELSE, KW_WHILE, KW_BEGIN, KW_END, KW_RETURN,
    KW_CONTINUE, KW_EXCLUSIVE, KW_AUTO_INCREMENT, KW_CURRENT_TIMESTAMP, STR };

// Lex one token starting at `*pcur` in condition `*pcond`; keyword `begin` enters condition
// `body`, where keywords `end` (back to `init`) and `return` are recognized.
static int lex(const char** pcur, int* pcond) {
    const char* YYCURSOR = *pcur;
    const char* YYMARKER;
    const char* tok = YYCURSOR;
    int kind;
    (void)YYMARKER;
#define YYGETCONDITION() *pcond
#define YYSETCONDITION(c) *pcond = c
    
{
	char yych;
	switch (YYGETCONDITION()) {
		case yycinit: goto yyc_init;
		case yycbody: goto yyc_body;
	}
/* *********************************** */
yyc_init:
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case ' ': goto yy3;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy5;
		case '_':
		case 'a':
		case 'b':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy7;
		case 'c': goto yy10;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
	{ kind = END; goto done; }
yy2:
	++YYCURSOR;
	{ kind = ERR; goto done; }
yy3:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
	{ kind = SPACE; goto done; }
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy5;
		default: goto yy6;
	}
yy6:
	{ kind = NUM; goto done; }
yy7:
	yych = *++YYCURSOR;
yy8:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy7;
		default: goto yy9;
	}
yy9:
	switch (yykw0(tok, YYCURSOR)) {
		case 1: { kind = KW_IF; goto done; }
		case 2: { kind = KW_ELSE; goto done; }
		case 3: { kind = KW_WHILE; goto done; }
		case 4:
			YYSETCONDITION(yycbody);
			{ kind = KW_BEGIN; goto done; }
		case 5: { kind = KW_EXCLUSIVE; goto done; }
		case 6: { kind = KW_AUTO_INCREMENT; goto done; }
		default: { kind = ID; goto done; }
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'u': goto yy11;
		default: goto yy8;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy12;
		default: goto yy8;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'r': goto yy13;
		default: goto yy8;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy14;
		default: goto yy8;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'n': goto yy15;
		default: goto yy8;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy16;
		default: goto yy8;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
		case '_': goto yy17;
		default: goto yy8;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy18;
		default: goto yy8;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'i': goto yy19;
		default: goto yy8;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy20;
		default: goto yy8;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'e': goto yy21;
		default: goto yy8;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
		case 's': goto yy22;
		default: goto yy8;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
		case 't': goto yy23;
		default: goto yy8;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'a': goto yy24;
		default: goto yy8;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'm': goto yy25;
		default: goto yy8;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
		case 'p': goto yy26;
		default: goto yy8;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy7;
		default: goto yy27;
	}
yy27:
	{ kind = KW_CURRENT_TIMESTAMP; goto done; }
/* *********************************** */
yyc_body:
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy29;
		case ' ': goto yy32;
		case '\'': goto yy34;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy35;
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy37;
		default: goto yy30;
	}
yy29:
	++YYCURSOR;
	{ kind = END; goto done; }
yy30:
	++YYCURSOR;
yy31:
	{ kind = ERR; goto done; }
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
		case ' ': goto yy32;
		default: goto yy33;
	}
yy33:
	{ kind = SPACE; goto done; }
yy34:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x00) goto yy31;
	goto yy40;
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy35;
		default: goto yy36;
	}
yy36:
	{ kind = NUM; goto done; }
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy37;
		default: goto yy38;
	}
yy38:
	switch (yykw1(tok, YYCURSOR)) {
		case 1:
			YYSETCONDITION(yycinit);
			{ kind = KW_END; goto done; }
		case 2: { kind = KW_RETURN; goto done; }
		case 3: { kind = KW_CONTINUE; goto done; }
		default: { kind = ID; goto done; }
	}
yy39:
	yych = *++YYCURSOR;
yy40:
	switch (yych) {
		case 0x00: goto yy41;
		case '\'': goto yy42;
		default: goto yy39;
	}
yy41:
	YYCURSOR = YYMARKER;
	goto yy31;
yy42:
	++YYCURSOR;
	{ kind = STR; goto done; }
}

done:
    *pcur = YYCURSOR;
    return kind;
#undef YYGETCONDITION
#undef YYSETCONDITION
}

int main(void) {
    static const struct { const char* str; int kinds[16]; } tests[] = {
        {"if else while iff els whilex", {KW_IF, SPACE, KW_ELSE, SPACE, KW_WHILE, SPACE, ID,
            SPACE, ID, SPACE, ID, END}},
        {"end return begin end return end", {ID, SPACE, ID, SPACE, KW_BEGIN, SPACE, KW_END,
            SPACE, ID, SPACE, ID, END}},
        {"begin if return 'x' continue end if", {KW_BEGIN, SPACE, ID, SPACE, KW_RETURN, SPACE, STR,
            SPACE, KW_CONTINUE, SPACE, KW_END, SPACE, KW_IF, END}},
        {"exclusive exclusives auto_increment auto_incremen", {KW_EXCLUSIVE, SPACE, ID, SPACE,
            KW_AUTO_INCREMENT, SPACE, ID, END}},
        {"current_timestamp current_timestam 12 -", {KW_CURRENT_TIMESTAMP, SPACE, ID, SPACE,
            NUM, SPACE, ERR, END}},
    };
    for (size_t i = 0; i < sizeof(tests) / sizeof(tests[0]); ++i) {
        const char* cur = tests[i].str;
        int cond = yycinit;
        for (size_t j = 0;; ++j) {
            int kind = lex(&cur, &cond);
            assert(kind == tests[i].kinds[j]);
            if (kind == END) break;
        }
    }
    return 0;
}
